2012-06-20      Stephan Linz <linz@li-pro.net>

	* common: initial version Avnet-S6LX9-AXI-tiny-13.2
