@@ -22,7 +22,7 @@
 #
 # CAUTION:  This file is automatically generated by libgen.
 # Version:  Xilinx EDK 13.2 EDK_O.61xd
-# Today is: Wednesday, the 20 of June, 2012; 20:33:09
+# Today is: Saturday, the 28 of July, 2012; 20:42:31
 #
 # Description: Linux 2.6 Configurations
 #
@@ -75,9 +75,5 @@ comment "System memory is axi_s6_ddrx_0"
 config KERNEL_BASE_ADDR
 	hex "Physical address where Linux Kernel is"
 	default 0x80000000
-
-
-# NOR Flash memory not defined
-comment "NOR Flash memory not defined"
 
 
