@@ -1,44 +1,3 @@
-______________________________________________________________________________
-
- K N O W N   I S S U E S
-=========================
-
-(1) DTS: MBRef-TPOS doesn't generate correct PHY parameters. Fix to:
-
-	phy0: phy@30 {
-		compatible = "natsemi,dp83848";
-		device_type = "ethernet-phy";
-		reg = <30>;
-	};
-
-(2) DTS: MBRef-TPOS doesn't generate SPI bus infrastructure. Fix to:
-
-	axi_spi_0: spi@40a00000 {
-		#address-cells = <1>;
-		#size-cells = <0>;
-		compatible = "xlnx,axi-spi-1.01.a", "xlnx,xps-spi-2.00.a";
-		interrupt-parent = <&axi_intc_0>;
-		interrupts = < 2 2 >;
-		reg = < 0x40a00000 0x10000 >;
-		xlnx,family = "spartan6";
-		xlnx,fifo-exist = <0x1>;
-		xlnx,num-ss-bits = <0x1>;
-		xlnx,num-transfer-bits = <0x8>;
-		xlnx,sck-ratio = <0x2>;
-		flash: n25p128@0 {
-			#address-cells = <1>;
-			#size-cells = <1>;
-			compatible = "micron,n25q128";
-			spi-max-frequency = <10000000>;
-			reg = <0>;
-			partition@0 {
-				label = "all";
-				reg = <0x0 0x1000000>;
-				read-only;
-			};
-		};
-______________________________________________________________________________
-
 OF FDT:
   - copy all files from microblaze_#/libsrc/device-tree_v#_##_# to here:
 	xilinx.dts
