@@ -22,7 +22,7 @@
 #
 # CAUTION:  This file is automatically generated by libgen.
 # Version:  Xilinx EDK 13.2 EDK_O.61xd
-# Today is: Wednesday, the 20 of June, 2012; 20:33:09
+# Today is: Saturday, the 28 of July, 2012; 20:42:31
 #
 # Description: Linux 2.4 Configurations
 #
@@ -302,5 +302,5 @@ define_int CONFIG_XILINX_TIMER_0_Interrupt 0
 define_hex CONFIG_XILINX_ERAM_START 0x80000000
 define_hex CONFIG_XILINX_ERAM_SIZE 0x04000000
 
-# NOR Flash memory not defined
+# NOR Flash memory is axi_spi_0
 
