@@ -22,7 +22,7 @@
 #
 # CAUTION:  This file is automatically generated by libgen.
 # Version:  Xilinx EDK 13.2 EDK_O.61xd
-# Today is: Wednesday, the 20 of June, 2012; 20:33:09
+# Today is: Saturday, the 28 of July, 2012; 20:42:30
 #
 # Description: U-Boot Configurations
 #
@@ -37,8 +37,6 @@ PLATFORM_CPPFLAGS += -mcpu=v8.20.a
 
 # Automatic U-Boot position at 0x83e00000
 CONFIG_SYS_TEXT_BASE = 0x83e00000
-
-# NOR Flash memory not defined
 
 # I2C controller not defined
 
