@@ -29,7 +29,7 @@
  *
  * CAUTION:  This file is automatically generated by libgen.
  * Version:  Xilinx EDK 13.2 EDK_O.61xd
- * Today is: Wednesday, the 20 of June, 2012; 20:33:10
+ * Today is: Saturday, the 28 of July, 2012; 20:42:31
  *
  * XPS project directory: Avnet-S6LX9-AXI-tiny-13.2
  */
@@ -49,7 +49,7 @@
 		reg = < 0x80000000 0x4000000 >;
 	} ;
 	chosen {
-		bootargs = "console=ttyUL0,115200 debug";
+		bootargs = "console=ttyUL0,115200 mtdparts=spi32766.0:16384k(all)ro debug";
 		linux,stdout-path = "/axi@0/serial@40600000";
 	} ;
 	cpus {
@@ -165,7 +165,7 @@
 			device_type = "network";
 			interrupt-parent = <&axi_intc_0>;
 			interrupts = < 1 0 >;
-			local-mac-address = [ 00 0a 35 66 41 00 ];
+			local-mac-address = [ 00 0a 35 97 f7 00 ];
 			phy-handle = <&phy0>;
 			reg = < 0x40e00000 0x10000 >;
 			xlnx,duplex = <0x1>;
@@ -181,7 +181,7 @@
 			mdio {
 				#address-cells = <1>;
 				#size-cells = <0>;
-				phy0: phy@30 {
+				phy0: phy@1e {
 					compatible = "natsemi,dp83848";
 					device_type = "ethernet-phy";
 					reg = <30>;
@@ -227,30 +227,11 @@
 			xlnx,num-ss-bits = <0x1>;
 			xlnx,num-transfer-bits = <0x8>;
 			xlnx,sck-ratio = <0x2>;
-			flash: n25p128@0 {
-				#address-cells = <1>;
-				#size-cells = <1>;
+			primary_flash: axi-spi@0 {
 				compatible = "micron,n25q128";
-				spi-max-frequency = <20000000>;
-				reg = <0>;
-				partition@0 {
-					label = "all";
-					reg = <0x0 0x1000000>;
-					read-only;
-				};
-/*
-				partition@0 {
-					label = "U-Boot";
-					reg = <0x0 0x40000>;
-					read-only;
-				};
-
-				partition@40000 {
-					label = "Kernel";
-					reg = <0x40000 0x3c0000>;
-				};
-*/
-			};
+				reg = < 0x0 >;
+				spi-max-frequency = <33333333>;
+			} ;
 		} ;
 		axi_timer_0: system-timer@41c00000 {
 			clock-frequency = <66666666>;
