@@ -22,7 +22,7 @@
  *
  * CAUTION:  This file is automatically generated by libgen.
  * Version:  Xilinx EDK 13.2 EDK_O.61xd
- * Today is: Wednesday, the 20 of June, 2012; 20:33:09
+ * Today is: Saturday, the 28 of July, 2012; 20:42:30
  *
  * Description: U-Boot Configurations
  *
@@ -61,7 +61,15 @@
 #define XILINX_RAM_START                         0x80000000
 #define XILINX_RAM_SIZE                          0x04000000
 
-/* NOR Flash memory not defined */
+/* NOR Flash memory is axi_spi_0 */
+#define XILINX_SPI_FLASH_BASEADDR                0x40a00000
+#define XILINX_SPI_FLASH_MAX_FREQ                33333333
+#define XILINX_SPI_FLASH_CS                      0
+#define XILINX_SPI_FLASH_SSBITS                  1
+#define XILINX_SPI_FLASH_TRANSFERBITS            8
+#define XILINX_SPI_FLASH_FIFO                    1
+#define XILINX_SPI_FLASH_SIZE                    0x01000000
+#define XILINX_SPI_FLASH_SECTSIZE                0x00010000
 
 /* Uart controller UARTLITE 0 is axi_uart_0 */
 #define XILINX_UARTLITE                         
@@ -69,6 +77,14 @@
 #define XILINX_UARTLITE_BAUDRATE                 115200
 
 /* I2C controller not defined */
+
+/* SPI controller is axi_spi_0 */
+#define XILINX_SPI                              
+#define XILINX_SPI_BASEADDR                      0x40a00000
+#define XILINX_SPI_FIFO                          1
+#define XILINX_SPI_MAX_FREQ                      33333333
+#define XILINX_SPI_SSBITS                        1
+#define XILINX_SPI_TRANSFERBITS                  8
 
 /* GPIO controller is axi_gpio_3 */
 #define XILINX_GPIO_BASEADDR                     0x40000000
