@@ -1,3 +1,7 @@
+2012-07-29      Stephan Linz <linz@li-pro.net>
+
+	* xlbsp: upgrade to lates exports from ISE 13.2
+
 2012-06-20      Stephan Linz <linz@li-pro.net>
 
 	* common: initial version Avnet-S6LX9-AXI-tiny-13.2
